# Google-ADK

./: .gitignore  .pre-commit-config.yaml  100_events.json  Dockerfile  Makefile  README.md  docker-compose.yml  events.json  example_usage.py  expert_sources.json  filtered_by_label.json  filtered_by_label_politics.json  kalshi_events.json  news_articles.json  polymarket_markets.json  pyproject.toml  scraped_articles.json  selected_event.json  selected_market.json  test.py
agents/: dataingestion.py  expertanalyst.py  marketanalyst.py  newsanalyst.py
api/: main.py
kalshi/: kalshiapi.py  kalshitest.py  kalshiutils.py  privatekeytest.py
kalshi_trader/: __init__.py  cli.py
kalshi_trader/agents/: __init__.py  base.py  bet_signal.py  data_cleaning.py  feature_engineering.py  model_selection.py  model_training.py
kalshi_trader/core/: __init__.py  config.py  execution.py  feature_store.py  ingestion.py  orchestrator.py
kalshi_trader/observability/: __init__.py  logging.py  metrics.py
polymarket/: eventbylabel.py  eventgrabber.py  eventsorter.py  marketgrabber.py  polymarketapi.py  polytest.py
researchagents/: marketanalyst.py  newsanalysttools.py
tools/: expertanalysttools.py  keyword.py  newsanalysttools.py
