[tool.poetry]
name = "kalshi-trader"
version = "0.1.0"
description = "Multi-agent workflow for betting against Kalshi odds using Google ADK"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "kalshi_trader"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
scrapy = "^2.11.0"
langgraph = "^0.0.40"
torch = "^2.1.0"
lightgbm = "^4.1.0"
weaviate-client = "^3.25.0"
prometheus-client = "^0.19.0"
pandas = "^2.1.0"
numpy = "^1.25.0"
redis = "^5.0.0"
httpx = "^0.25.0"
loguru = "^0.7.0"
# Google ADK and AI dependencies
google-generativeai = "^0.3.0"
google-cloud-aiplatform = "^1.38.0"
google-auth = "^2.23.0"
google-auth-oauthlib = "^1.1.0"
google-api-python-client = "^2.108.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
kalshi-trader = "kalshi_trader.cli:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["E501", "W503", "E203"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 